--- a/.gitignore
+++ b/.gitignore
@@ -25,32 +25,7 @@ contents.xcworkspacedata
 .DS_Store
 .svn
 profile
-**/MacOSX/build
-**/iOS/build
-**/Linux/build
-**/LinuxMakefile/build
-**/VisualStudio2005/Debug
-**/VisualStudio2005/Release
-**/VisualStudio2008/Debug
-**/VisualStudio2008/Release
-**/VisualStudio2010/Debug
-**/VisualStudio2010/Release
-**/VisualStudio2012/Debug
-**/VisualStudio2012/Release
-**/VisualStudio2013/Debug
-**/VisualStudio2013/Release
-**/VisualStudio2013/x64
-**/VisualStudio2015/Debug
-**/VisualStudio2015/Release
-**/VisualStudio2015/x64
-**/Android/bin
-**/Android/libs
-**/Android/gen
-**/Android/obj
-**/CodeBlocks/bin
-**/CodeBlocks/obj
-**/CodeBlocks/*.depend
-**/CodeBlocks/*.layout
-**/Builds/AndroidStudio
+**/Builds
+**/JuceLibraryCode
 doxygen/doc
 extras/Projucer/JUCECompileEngine.dylib
